# document-chat-bot

./: .gitignore  PDF_handlerlangchain.py  README.md  bot.py  bot_logger.py  collections.db  config_reader.py  db.sql  pyproject.toml  start_command.py
bot/: add_file_command.py  bot.py  echo_command.py  error_handler.py  question_command.py  start_command.py
data_processing/: PDF_handlerlangchain.py  async_PDF.py
handlers/: common.py  new_collection.py
models/: Collection.py  User.py  base.py
old/: add_file_command.py  ask_command.py
src/: PDF_handlerlangchain.py  add_file_command.py  ask_command.py  bot.py  start_command.py
vector_db/: chroma.sqlite3
