[tool.poetry]
name = "bot-pdf"
version = "0.1.0"
description = ""
authors = ["justchillinghere <41962623+justchillinghere@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "bot_pdf"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
